syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_package = "io.toxa108.pokerito.userservice.proto";
option java_multiple_files = true;

service UserService {
    rpc create (UserRequest) returns (UserResponse);
    rpc get (UserRequest) returns (UserResponse);
    rpc auth (UserRequest) returns (AuthResponse);
}

message UserRequest {
    string id = 1;
    string email = 2;
    string login = 3;
    string password = 4;
}

message UserResponse {
    string id = 1;
    string email = 2;
    string login = 3;
    string usd = 4;
}

message AuthResponse {
    string token = 1;
}